# de-week6-pandas-KofiOghenebrume

./: README.md  escalation_report.csv
data/: channel_type.csv  employee.csv  fault_type.csv  service_data.csv
src/zentel_pipeline/: etl.py
tests/: location.csv  test_analysis.py
zentel_pipeline/: README.md  escalation_report.csv  kpi_report.csv  pyproject.toml
zentel_pipeline/data/: service_type.csv
zentel_pipeline/src/zentel_pipeline/: analysis.py  etl.py  main.py  viz.py
zentel_pipeline/tests/: test_etl.py
