[project]
name = "zentel-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "tegakay",email = "kofitega@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]

[tool.poetry]
packages = [{include = "zentel_pipeline", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
zentel-pipeline = "zentel_pipeline.main:main"
